--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-scroll-parallax": "^3.4.5",
     "swiper": "^11.1.5",
     "tailwind-merge": "^2.4.0",
