--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.408.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
