--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.3.7",
     "lucide-react": "^0.408.0",
     "next": "14.2.2",
